--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
       <div class="row h-75">
         <div class="col-1 bg-theme line animate__bounceInDown"></div>
         <div class="col-11 position-relative">
-          <span class="number position-absolute">18</span>
+          <span class="number position-absolute platinum">18</span>
         </div>
       </div>
       <div class="row h-25 w-100">
