--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
             <div class="modal-footer">
               <button
                 type="button"
-                class="btn btn-cerrarmodal modal-text"
+                class="btn btn-cerrarmodal modal-text w-100"
                 data-bs-dismiss="modal"
               >
                 Cerrar
