--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
       background-color: var(--color-theme);
       color: var(--color-black);
       font-weight: bold;
-      align-self: end;
-      margin: 0 auto;
+      margin: 2% auto;
     }
 
     .icon_vestimenta {
@@ -301,7 +300,7 @@
     }
 
     .name {
-      font-size: 5rem;
+      font-size: 4.5rem;
       font-family: var(--font-title);
       color: var(--color-theme);
       letter-spacing: 5px;
@@ -310,6 +309,22 @@
       left: -40px;
       font-weight: 600;
     }
+   @media only screen and (max-width: 376px) {
+      .name {
+        font-size: 5rem; /* Ajusta el tamaño de la fuente para el S8+ */
+        left: -45px; /* Ajusta la posición para el S8+ */
+        letter-spacing: 3px;
+        top:-25px /* Ajusta el espaciado de letras para el S8+ */
+      }
+
+      .number{
+        font-size: 450px; 
+      }
+  
+    }
+
+    /* Estilos específicos para dispositivos con un ancho máximo de 375px */
+
 
     .line {
       animation: fadeInDownBig;
@@ -616,7 +631,7 @@
     <!--cards-->
     <section id="info" class="container vh-100 mt-5">
       <div class="row">
-        <div class="col-12 col-xl-4 d-flex justify-content-center align-items-center my-4">
+        <div class="col-12 col-xl-4 d-flex justify-content-center align-items-center my-auto">
           <div class="card_">
             <img class="icon_vestimenta" src="./img/icons/vestimenta.png" alt=""/>
             <h3>Código de Vestimenta</h3>
@@ -628,7 +643,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-xl-4 d-flex justify-content-center align-items-center  my-4">
+        <div class="col-12 col-xl-4 d-flex justify-content-center align-items-center  my-auto">
           <div class="card_">
             <img class="icon_card" src="./img/icons/regalo.png" alt="" />
             <h3>¿Deseas hacer un regalo?</h3>
